--- a/.env
+++ b/.env
@@ -1,2 +1,12 @@
 PORT=5000
 NODE_ENV=development
+SESSION_SECRET=my_super_secret_key
+
+
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=sqbiz924Q
+DB_NAME=message_hub
+
+JWT_SECRET=super_secret_jwt_key
+JWT_EXPIRES_IN=1d
