--- a/.env
+++ b/.env
@@ -2,10 +2,9 @@ PORT=5000
 NODE_ENV=development
 SESSION_SECRET=my_super_secret_key
 
-
 DB_HOST=127.0.0.1
 DB_USER=root
-DB_PASSWORD=tushar@123
+DB_PASSWORD=sqbiz924Q
 DB_NAME=message_hub
 
 JWT_SECRET=super_secret_jwt_key
