--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "express": "^5.2.1",
     "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.3",
-    "mysql2": "^3.16.0"
+    "multer": "^2.0.2",
+    "mysql2": "^3.16.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
