--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ SESSION_SECRET=my_super_secret_key
 
 DB_HOST=127.0.0.1
 DB_USER=root
-DB_PASSWORD=sqbiz924Q
+DB_PASSWORD=tushar@123
 DB_NAME=message_hub
 
 JWT_SECRET=super_secret_jwt_key
